--- a/src/Components/ReusableUI/reusableStyling.scss
+++ b/src/Components/ReusableUI/reusableStyling.scss
@@ -91,7 +91,7 @@
     
     .player_card_wrapper .player_card_name  {  display: block; font-size: 16vw; text-transform: uppercase; color: #050505 }
     
-    .home_card_button {  width: 86%;  text-align: end;  position: absolute; }
+    .home_card_button {  width: 86%;  text-align: end;   }
     
     
 
