--- a/src/Components/theMatches/theMatches.scss
+++ b/src/Components/theMatches/theMatches.scss
@@ -13,6 +13,7 @@
     .the_matches_wrapper {
         display: flex;
         flex-direction: column;
+        padding-top: 10rem;
     }
     
     .the_matches_wrapper .left {
